# cpp-matrices

./: CMakeLists.txt  README.md  matrix_tools.pc.in
src/: Matrix.cpp  Matrix.hpp
tests/: Main.cpp
